<package format="3">
  <name>onnxruntime_vendor</name>
  <version>1.21.0</version>
  <description>Vendor package for ONNX Runtime</description>
  <maintainer email="juliajster@gmail.com">Julia Jia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>
  <buildtool_depend>git</buildtool_depend>

  <build_depend>pkg-config</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>